--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-  "name": "markusslima/bootstrap-filestyle",
-  "description": "jQuery customization of input html file for Bootstrap Twitter http://markusslima.github.io/bootstrap-filestyle/",
+  "name": "jcputney/bootstrap-filestyle",
+  "description": "jQuery customization of input html file for Bootstrap Twitter http://jcputney.github.io/bootstrap-filestyle/",
   "type": "component",
-  "homepage": "http://markusslima.github.io/bootstrap-filestyle/",
+  "homepage": "http://jcputney.github.io/bootstrap-filestyle/",
   "license": "MIT",
   "authors": [
     {
-      "name": "Markus Lima Luthier",
-      "email": "markusslima@gmail.com"
+      "name": "Jonathan Putney",
+      "email": "jonathan@putney.io"
     }
   ],
   "require": {
