--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "bootstrap-filestyle",
-  "version": "2.1.3",
+  "name": "bootstrap4-filestyle",
+  "version": "2.1.4",
   "homepage": "https://github.com/jcputney/bootstrap-filestyle",
   "authors": [
     "Jonathan Putney @jcputney"
   ],
-  "description": "Bootstrap FileStyle is a quick and simple plugin to help style your form's file upload inputs using Bootstrap 4.",
+  "description": "Bootstrap 4 FileStyle is a quick and simple plugin to help style your form's file upload inputs using Bootstrap 4.",
   "main": "src/bootstrap-filestyle.js",
   "keywords": [
     "bootstrap",
